--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nursary-server",
+  "name": "mobile-server",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.0"
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
